# mercury-framework

./: built-light-release.ps1  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
mercury_plugins/example_simulator/: manifest.json
tests/: test_plugin_lifecycle.py  test_plugin_loader.py
